# bitkee

./: .env  .gitignore  README.md  config-overrides.js  package-lock.json  package.json
journal/2026-05-29/: 001-wasm-puzzle-search.md
public/: index.html  manifest.json
public/wasm/: btc_wasm.js  btc_wasm_bg.wasm  wasmWorker.js
src/: App.css  App.js  addressWorker.js  index.js
src/Community/: Community.js  Style.css
src/History/: History.js  Style.css
src/PageNumber/: PageNumber.js  Style.css
src/Results/: ResultItem.js  Results.js  Style.css
src/components/: BottomNav.css  BottomNav.js  LanguageSwitcher.css  LanguageSwitcher.js  Modal.css  PageInputModal.js  PercentageInputModal.js  SoundToggle.css  SoundToggle.js
src/constants/: bitcoin.js
src/data/: puzzles.js
src/hooks/: useTranslation.js
src/i18n/: translations.js
src/utils/: bitcoin.js  formatters.js  workerFactory.js
wasm/btc_wasm/: BUILD.md  Cargo.toml
wasm/btc_wasm/src/: lib.rs
