[package]
name = "btc_wasm"
version = "0.1.0"
edition = "2021"
authors = ["BitKee"]
description = "Fast Bitcoin address generation via WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

# Pure Rust crypto (no C dependencies - WASM compatible)
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"

# Better error messages in debug
console_error_panic_hook = { version = "0.1", optional = true }

# Required to compile `k256` (transitive dep) for wasm*-unknown-unknown — the "js" feature
# wires getrandom to the browser crypto. Our own code does NOT call any RNG (puzzle randomness
# comes from JS via crypto.getRandomValues); this entry exists purely to enable that feature.
getrandom = { version = "0.2", features = ["js"] }

# NOTE: serde/serde-wasm-bindgen/js-sys were removed — results are plain JSON strings and the
# worker uses a minimal hand-written glue (no serde marshalling), so they're no longer needed.

[profile.release]
opt-level = 3
lto = true
